fixed content alignment

--- a/style.css
+++ b/style.css
@@ -1,17 +1,7 @@
 h1{
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: maroon;
     color: white;
-}
-
-.menu{
-    font-family: Arial, Helvetica, sans-serif;
-    color: #777777
-}
-
-.content{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color:#777777
+    text-align: center;
 }
 
 .body{
